test(knightMoveStrategy): ParameterizedTest 로 변경